[package]
name = "production-flow-designer"
version = "0.0.1"
edition = "2021"

[dependencies]
egui = "0.22.0"
eframe = "0.22.0"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
